solved issue with incoming directory

--- a/MarketingLogic/MarketingLogic.csproj
+++ b/MarketingLogic/MarketingLogic.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\MLogicLib\MLogicLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="_in\" />
+  </ItemGroup>
+
 </Project>
